# CLEAN-Slate-EQ

./: .gitignore  AGENT_CHANGES_DETAILED_REPORT.md  AGENT_CHANGES_VERIFICATION_REPORT.md  AGENT_VERIFICATION_SUMMARY.md  CHANGES_REFERENCE.md  CMakeLists.txt  COMPILATION_FIXES_REQUIRED.md  COMPLETE_BUG_AUDIT_FINAL_REPORT.md  COMPLETION_REPORT.md  COMPREHENSIVE_BUG_AUDIT_FINAL.md  CORRECTED_FINAL_TRUTH.md  EXECUTIVE_SUMMARY.md  FABFILTER_FEATURE_ANALYSIS.md  FINAL_CONFIRMATION_APPROVED.md  GET_STARTED.md  GITHUB_PUSH_VERIFICATION.md  GITHUB_SANITIZATION_COMPLETE.md  GIT_FINAL_STATUS.md  HONEST_FINAL_ASSESSMENT.md  IMPLEMENTATION_PLAN_TIER1.md  IMPROVEMENT_ROADMAP.md  INDEX.md  MEMORY_SAFETY_FIXES.md  NEXT_STEPS.md  PHASE1_2_FIXES_SUMMARY.md  PLUGIN_IMPROVEMENTS_DETAILED.md  PRD.md  QUICK_ACTION_GUIDE.md  QUICK_GITHUB_GUIDE.md  README.md  RE_VERIFICATION_ACTUAL_CHANGES.md  RE_VERIFICATION_INDEX.md  VERIFICATION_DOCUMENTS_INDEX.md  VISUAL_SUMMARY.md  YOUR_ANSWER.md  metadata.json  package-lock.json
.github/: copilot-instructions.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  SurgicalFilter.h
src/: App.tsx
src/components/: DevTransport.tsx  EQCurveVisualizer.tsx  EQGraph.tsx  FloatingBandControl.tsx  Knob.tsx  LinearSlider.tsx  SpectrumAnalyzer.tsx  SpectrumSphere.tsx  WaveformDisplay.tsx
src/constants/: hiseCode.ts
src/utils/: EQGraphLogic.ts  PresetData.ts
